# sae

./: .gitignore  README.md  pyproject.toml
examples/data_process/: llava_ov_clevr.py  mmmu.py
examples/train/ddp/: run_qwen25_vl_7b_ddp.sh
examples/train/zero/: run_qwen25_vl_72b_zero3.sh  run_qwen25_vl_7b_zero2.sh
src/easy_sae/: __init__.py
src/easy_sae/launch/: config.py  train.py
src/easy_sae/models/: __init__.py  peft_sae_model.py
src/easy_sae/models/topk_sae/: __init__.py  config.py  layer.py  model.py
src/easy_sae/trainer/: sae_trainer.py
src/easy_sae/utils/: __init__.py
src/easy_sae/utils/datasets/: cache_dataset.py
src/easy_sae/utils/factory/: model_factory.py  sae_factory.py
src/sae/: mapping_func.py
src/sae/launch/: config.py  train.py
src/sae/models/topk_sae/: config.py
src/sae/trainer/: sae_trainer.py
src/sae/utils/datasets/: cache_dataset.py
test/models/: test_forward.py  test_inject.py  test_save_and_load.py
